# task_queue

./: .gitignore  Cargo.toml  README.md  compose.yaml  config.template.yaml
api_server/: Cargo.toml
api_server/src/: app.rs  error.rs  lib.rs  main.rs  state.rs
api_server/src/db/: connection.rs
api_server/tests/: db_tests.rs
benchmarks/: Cargo.toml
benchmarks/src/: main.rs
migrations/: 0001_create_jobs_table.sql  0002_create_worker_table.sql  0003_alter_default_job_attempts.sql  0005_add_lease_expires_at_column_in_jobs_table.sql  0005_add_parent_job_id_and_rescheduled_in_jobs_table.sql  0006_add_lease_expires_at_column_in_failed_jobs_table.sql  0008_create_completed_jobs_table.sql  0009_delete_completed_at_column_in_jobs.sql
monitoring/: prometheus.yaml
monitoring/grafana/dashboards/: dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboard-config.yaml
monitoring/grafana/provisioning/datasources/: datasources.yaml
server/: Cargo.toml
server/src/: app.rs  background.rs  handlers.rs  helper.rs  lib.rs  main.rs  prometheus.rs  state.rs  utils.rs
server/src/db/: models.rs  queries.rs
server/tests/: api_tests.rs  db_tests.rs  setup.rs  test_server.rs
shared/: Cargo.toml
shared/src/: config.rs  lib.rs  tracing.rs
shared/src/db/: connection.rs  models.rs  queries.rs
shared/tests/: db_query_tests.rs
test_fixtures/: invalid_jobs.sql  jobs.sql  workers.sql
worker/: Cargo.toml
worker/src/: error.rs  executor.rs  heartbeat.rs  lib.rs  main.rs  prometheus.rs
worker/src/db/: models.rs  queries.rs
worker/src/handlers/: email.rs  mod.rs  webhook.rs
worker/tests/: query_tests.rs
worker_supervisor/src/: main.rs
