[workspace]
resolver = "3"
members = ["worker_supervisor", "server", "shared", "worker", "benchmarks"]


[workspace.dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
prometheus-client = { version = "0.24.1" }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["serde", "v7"] }
