[package]
name = "api_server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }

axum = "0.8.8"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "json", "uuid", "chrono", "migrate"] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["serde", "v7"] }
