[package]
name = "server"
version = "0.1.0"
edition = "2024"
default-run = "server"

[dependencies]
shared = { path = "../shared" }

chrono = { workspace = true }
prometheus-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

axum = "0.8.8"
axum-test = "18.6.0"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }
croner = "3.0.1"
