[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "migrate"] }
uuid = { version = "1.19.0", features = ["serde", "v7"] }
