[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["serde", "v7"] }
