[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }

chrono = "0.4.43"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["v7"] }
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-native-tls"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
